<resources>
    <string name="app_name">FinalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="legendary">Legendary</string>
    <string name="epic">Epic</string>
    <string name="rare">Rare</string>
    <string name="common">Common</string>
    <string name="clash_royale_cards">Clash Royale Cards</string>
    <string name="goBack">Go Back</string>
    <string name="detail">detail</string>
    <string name="name">name</string>
    <string name="arena">arena</string>
    <string name="rarity">rarity</string>
    <string name="elixir">elixir</string>
    <string name="type">type</string>
</resources>
